cleaned up some files

--- a/data/sife_configuration.json
+++ b/data/sife_configuration.json
@@ -1,1 +1,7 @@
-{"record_changes": false, "make_change_logs": true, "device_names": ["windows", "android", "linux"], "current_device": "linux", "db_engine": "sqlite3"}
+{
+  "record_changes": false,
+  "make_change_logs": true,
+  "device_names": ["windows", "android", "linux"],
+  "current_device": "linux",
+  "db_engine": "sqlite3"
+}
