--- a/data/sife_configuration.json
+++ b/data/sife_configuration.json
@@ -1,1 +1,1 @@
-{"record_changes": false, "make_change_logs": true, "db_engine": "mysql"}
+{"record_changes": false, "make_change_logs": true, "db_engine": "sqlite3"}
